> 2.3.2
 - suggest-position-slices: fix problem where first slice of genome was omitted from output (with new split
   by number of bytes option introduced in 2.3).
2.3.1
 - Fix for https://github.com/CampagneLaboratory/goby/issues/3
 - Upgrade commons-io and dsiutils to latest jar versions. Log messages when scanning reads file with cfs mode.
 - DistinctValueCounterBitSet: now grows to biggest size at construction time.
 - Fixed a performance problem. When reading large reads file (>10GB), performance of ReadsReader would degrade
   over time. This was due to caching of data in static protobuf methods of ReadCollection. We now create a
   builder instance that gets garbage collected when it is no longer used. This fixes a subtle performance
   problem. The same fix has been applied to alignment readers.
2.3
 - concatenate-alignments mode: add ability to restrict output to a genomic slice (see -s and -e options).
 - API change: AlignmentSliceHelper makes it easier to parse and process genomic slices for sets of alignments.
 - concatenate-alignments mode: now transfers read groups to output in the same way that non-sorted concat does.
 - concatenate-alignments mode: Add a mechanism to override/define read groups/read origin info on the fly when
   reading alignments that did not include them. Coupled with changes to compact-to-sam, this makes it possible
   to get BAM files with read groups directly from Goby alignments.
 - compact-to-sam mode: fixed output of read groups, which were not correctly written for platform, platform unit,
   and library.
 - suggest-position-slices: add --restrict-per-chromosome option.  When this switch is provided, slices will be
   restricted to start and end on the same chromosome. This is useful to produce intervals to give Mutect,
   for instance.
 - Trim mode: add --trim-left --trim-right parameters to control trimming of specific sequence extremities.
 - Trim mode: add --verbose flag.
2.2.1