@@ -26,7 +26,7 @@
             <stringParser>
                 <classname>StringStringParser</classname>
             </stringParser>
-             <required>true</required>
+            <required>true</required>
             <help>Name of the input compact-reads file.</help>
         </flaggedOption>
         <unflaggedOption>
@@ -36,13 +36,24 @@
             </stringParser>
             <greedy>true</greedy>
             <required>true</required>
-            <help>Command to execute in parallel for each piece of the input. The symbol %read.fastq% will be replaced with the filename for the fastq file of each piece. The symbol %tmp1% will be available with a valid
-and distinct filename for each part to write temporary content. The symbol %output% will be available
-with a valid filename to write the output of this part (pre-concat output).
+            <help>Command to execute in parallel for each piece of the input. The symbol %read.fastq% will be
+                replaced with the filename for the fastq file of each piece. The symbol %tmp1% will be
+                available with a valid and distinct filename for each part to write temporary content.
+                The symbol %output% will be available with a valid filename to write the output of this part
+                (pre-concat output). When the --paired argument is given, the symbol %pair.fastq% will be
+                replaced with the filename for the fastq file corresponding to pair sequences.
             </help>
         </unflaggedOption>
 
+        <switch>
+            <id>paired</id>
+            <longFlag>paired</longFlag>
 
+            <defaults>false</defaults>
+            <help>When this switch is provided, extract pairs from the compact reads input and generate
+                %pair.fastq% symbols.
+            </help>
+        </switch>
         <flaggedOption>
             <id>num-parts</id>
             <longFlag>num-parts</longFlag>
@@ -62,7 +73,7 @@ with a valid filename to write the output of this part (pre-concat output).
                 <classname>StringStringParser</classname>
             </stringParser>
             <required>true</required>
-            <help>output filename, where compact-alignment will be written.            </help>
+            <help>output filename, where compact-alignment will be written.</help>
         </flaggedOption>
     </parameters>
 </jsap>
